[gd_scene load_steps=10 format=3 uid="uid://b7th77nufxc0e"]

[ext_resource type="Script" path="res://VR/Scripts/player.gd" id="1_qjwog"]
[ext_resource type="PackedScene" uid="uid://dfnn0bkaebfqq" path="res://Trees/Lorenzo.tscn" id="2_2kuin"]
[ext_resource type="PackedScene" uid="uid://bw4hmbdh2btwa" path="res://Trees/dinosaurs.tscn" id="3_vrc8s"]
[ext_resource type="PackedScene" uid="uid://6yj852q76bro" path="res://Trees/Humans.tscn" id="4_ypydm"]

[sub_resource type="SphereMesh" id="SphereMesh_w5om5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ae202"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7dhry"]
transparency = 1
blend_mode = 1
cull_mode = 1

[sub_resource type="BoxMesh" id="BoxMesh_ty151"]
material = SubResource("StandardMaterial3D_7dhry")

[sub_resource type="BoxShape3D" id="BoxShape3D_8ecx5"]

[node name="Player" type="Node3D"]
script = ExtResource("1_qjwog")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
current = true

[node name="Right Controller" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0370281, -8.04886e-05, 0.000199657)
tracker = &"right_hand"

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/Right Controller"]
unique_name_in_owner = true
transform = Transform3D(0.0162606, 0, 0, 0, 0.0162606, 0, 0, 0, 0.0162606, 0, 0, 0)
mesh = SubResource("SphereMesh_w5om5")

[node name="TeleportPoint" type="Area3D" parent="XROrigin3D/Right Controller/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/Right Controller/MeshInstance3D/TeleportPoint"]
shape = SubResource("SphereShape3D_ae202")

[node name="Left Controller" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0290942, 0, 0)
tracker = &"left_hand"

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/Left Controller"]
transform = Transform3D(0.0477502, 0, 0, 0, 0.0477502, 0, 0, 0, 0.0477502, 0, 0, 0)
mesh = SubResource("BoxMesh_ty151")
skeleton = NodePath("../../..")

[node name="TeleportMesh" type="Area3D" parent="XROrigin3D/Left Controller/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/Left Controller/MeshInstance3D/TeleportMesh"]
shape = SubResource("BoxShape3D_8ecx5")

[node name="TeleportOrgin" type="Node3D" parent="XROrigin3D/Left Controller/MeshInstance3D/TeleportMesh"]

[node name="Lorenzo" parent="XROrigin3D/Left Controller/MeshInstance3D/TeleportMesh" instance=ExtResource("2_2kuin")]
transform = Transform3D(-0.025, 8.71967e-18, -2.18557e-09, 8.71967e-18, 0.025, -8.71967e-18, 2.18557e-09, -8.71967e-18, -0.025, -0.129, -0.25, 0.04)
visible = false

[node name="Dinosaurs" parent="XROrigin3D/Left Controller/MeshInstance3D/TeleportMesh" instance=ExtResource("3_vrc8s")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.007, -0.171, 2.08165e-12)
visible = false

[node name="Humans" parent="XROrigin3D/Left Controller/MeshInstance3D/TeleportMesh" instance=ExtResource("4_ypydm")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 2.08165e-12, -0.171, 2.08165e-12)

[connection signal="area_entered" from="XROrigin3D/Right Controller/MeshInstance3D/TeleportPoint" to="." method="_on_teleport_point_area_entered"]
[connection signal="area_exited" from="XROrigin3D/Right Controller/MeshInstance3D/TeleportPoint" to="." method="_on_area_3d_area_exited"]
